test/files/neg/t5504/s_1.scala
// a.scala
package object foo {
  val m: List[_] = Nil
}
